version/0.22/_sources/api/solver/_autosummary/settings/material_3.rst.txt
:orphan:

.. _material_3:

material
========

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.material_3.material
    :show-inheritance:

.. rubric:: Methods

==========================================   =========================================

Method                                                                         Summary

==========================================   =========================================
:ref:`delete <delete_1>`                                      Delete selected objects.

:ref:`rename <rename>`                                              Rename the object.

:ref:`list <list>`                                      List the names of the objects.

:ref:`list_properties <list_properties_1>`       List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                          Create a copy of the object.

==========================================   =========================================

.. rubric:: Named object type

:ref:`material_child <material_child_1>`


.. rubric:: Included in:

==========================   ====================

Parent                                    Summary

==========================   ====================
:ref:`species <species_4>`       'species' child.

==========================   ====================

